--- a/kasa/src/components/Host/_host.scss
+++ b/kasa/src/components/Host/_host.scss
@@ -27,7 +27,7 @@
         }
 
         &__picture {
-            width: 30px;
+            width: 40px;
 
         }
     }
