--- a/kasa/src/components/Tag/_tag.scss
+++ b/kasa/src/components/Tag/_tag.scss
@@ -5,9 +5,11 @@
     padding: 2px 24px;
     margin-right: 10px;
     border-radius: 10px;
+    margin-bottom: 10px;
 
     &__container {
         display: flex;
+        flex-wrap: wrap;
     }
 
 
